Signal page (without description)

--- a/less/main.less
+++ b/less/main.less
@@ -1,6 +1,7 @@
 // out: "../css/app.css", compress: true, sourceMap: true
 
 @import 'monitoring';
+@import 'signals';
 
 @bg-color: #E3F2FD;
 
@@ -15,4 +16,8 @@ html, body {
 	position: relative;
 	z-index: -3;
 	background-color: @bg-color;
+}
+
+h1 {
+	text-align: center;
 }
