--- a/less/signals.less
+++ b/less/signals.less
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: space-around;
     flex-direction: column;
+    margin-bottom: 100px;
 
     .error-div {
         padding: 20px;
@@ -31,20 +32,6 @@
 
         h3 {
             margin-left: 20px;
-        }
-    }
-
-    .modal {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 400;
-        box-shadow: 24;
-        padding: 4;
-
-        p {
-            text-align: justify;
         }
     }
 }
