Add temperature component

--- a/less/temperature.less
+++ b/less/temperature.less
@@ -1,6 +1,6 @@
 // out: false, compress: true, sourceMap: true, main: 'monitoring.less'
 
-.battery-data {
+.temperature-data {
     .line-1 h3 {
         text-align: center;
     }
@@ -8,12 +8,12 @@
     .line-2 {
         display: flex;
     
-        .battery-container, .data-div {
+        .temperature-container, .data-div {
             display: flex;
             align-items: center;
         }
-        
-        .battery-container {
+
+        .temperature-container {
             margin-left: -15px;
         }
         
