--- a/less/logbook.less
+++ b/less/logbook.less
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: space-around;
     flex-direction: column;
+    margin-bottom: 100px;
 
     .error-div {
         padding: 20px;
