--- a/less/monitoring.less
+++ b/less/monitoring.less
@@ -2,6 +2,7 @@
 
 @import 'relative_data.less';
 @import 'battery.less';
+@import 'temperature.less';
 
 @card-size: 200px;
 @card-bg-color: rgba(255, 255, 255, 0.8);
@@ -9,6 +10,7 @@
 .monitoring main {
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 100px;
     justify-content: space-around;
 
     .data-card{
