Add speed component

--- a/less/monitoring.less
+++ b/less/monitoring.less
@@ -3,6 +3,7 @@
 @import 'relative_data.less';
 @import 'battery.less';
 @import 'temperature.less';
+@import 'speedometer.less';
 
 @card-size: 200px;
 @card-bg-color: rgba(255, 255, 255, 0.8);
