--- a/less/monitoring.less
+++ b/less/monitoring.less
@@ -3,6 +3,7 @@
 @import 'relative_data.less';
 @import 'battery.less';
 @import 'temperature.less';
+@import 'odometer.less';
 @import 'speedometer.less';
 
 @card-size: 200px;
