Use API for getting monitoring data

--- a/less/speedometer.less
+++ b/less/speedometer.less
@@ -3,8 +3,9 @@
 @card-size: 200px;
 
 html .monitoring main .speedometer-data {
-    width: @card-size * 2;
     padding: 5px;
+    order: -1;
+    flex: 1 0 @card-size * 2;
     
     .line-1 h3 {
         text-align: center;
