Add a WebSocket component

--- a/less/monitoring.less
+++ b/less/monitoring.less
@@ -26,3 +26,15 @@
         background-color: @card-bg-color;
     }
 }
+
+.ws-card-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    bottom: 70px;
+
+    div {
+        cursor: pointer;
+    }
+}
