FIx some responsive issues

--- a/less/battery.less
+++ b/less/battery.less
@@ -3,10 +3,12 @@
 .battery-data {
     .line-1 h3 {
         text-align: center;
+        margin: 5px;
     }
 
     .line-2 {
         display: flex;
+        margin-top: 15px;
     
         .battery-container, .data-div {
             display: flex;
@@ -19,7 +21,7 @@
         
         .data-div {
             flex-grow: 1;
-            font-size: 27px;
+            font-size: 23px;
             margin-left: -10px;
             justify-content: center;
         }
