--- a/less/speedometer.less
+++ b/less/speedometer.less
@@ -5,14 +5,16 @@
 html .monitoring main .speedometer-data {
     padding: 5px;
     order: -1;
-    flex: 1 0 @card-size * 2;
+    flex: 1 0 16em;
     
     .line-1 h3 {
         text-align: center;
+        margin: 5px;
     }
 
     .line-2 {
         display: flex;
+        margin-top: 15px;
     
         .speedometer-container, .data-div {
             display: flex;
