--- a/less/monitoring.less
+++ b/less/monitoring.less
@@ -5,7 +5,7 @@
 @import 'odometer.less';
 @import 'speedometer.less';
 
-@card-size: 200px;
+@card-size: 9em;
 @card-bg-color: rgba(255, 255, 255, 0.8);
 
 .monitoring main {
@@ -13,10 +13,11 @@
     flex-wrap: wrap;
     margin-bottom: 100px;
     justify-content: space-around;
+    padding: 0 20px;
 
     .data-card{
         border-radius: 10px;
-        margin: 20px;
+        margin: 10px 10px 10px 0;
         padding: 10px;
         width: @card-size;
         height: @card-size;
@@ -24,5 +25,9 @@
         overflow: hidden;
         box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.4);
         background-color: @card-bg-color;
+
+        .line-1 h3 {
+            font-size: 16px;
+        }
     }
 }
