--- a/less/temperature.less
+++ b/less/temperature.less
@@ -3,10 +3,12 @@
 .temperature-data {
     .line-1 h3 {
         text-align: center;
+        margin: 5px;
     }
 
     .line-2 {
         display: flex;
+        margin-top: 20px;
     
         .temperature-container, .data-div {
             display: flex;
